Написаны формы для входа и регистрации, они же добавлены в html, написаны CBV для обработки форм на станицах

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,7 +11,7 @@
     {#    <link rel="stylesheet" href="{% static 'dev/css/style.css' %}">#}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
-    <title>{% block title %}FINUPS{% endblock %}</title>
+    <title>{% block title %}NOTIFIER - Главная{% endblock %}</title>
 </head>
 <body>
 {#header#}
