--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -7,11 +7,16 @@
                 <img src="{% static 'img/logo.png' %}" alt="logo">
             </a>
 
-            <button class="navbar-toggler navbar-light bg-light" type="button" data-toggle="collapse" data-target="#MenuHeaderRow"
+            <button class="navbar-toggler navbar-light bg-light" type="button" data-toggle="collapse"
+                    data-target="#MenuHeaderRow"
                     aria-controls="MenuHeaderRow" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+            {% if auth %}
+                <li class="nav-item">
+                    <a class="nav-link underscoreLink" href="{% url 'service_app:logout_apge' %}">Выход</a>
+                </li>
+            {% endif %}
         </div>
     </nav>
 </header>
