--- a/templates/main/enter/login.html
+++ b/templates/main/enter/login.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% load static %}
+<section class="form-login">
+    <div class="container center">
 
-</body>
-</html>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="forgot-link">
+                <a href="">Забыли пароль?</a>
+            </div>
+            <button type="submit">Далее</button>
+        </form>
+    </div>
+</section>
