--- a/templates/main/enter/inline-login.html
+++ b/templates/main/enter/inline-login.html
@@ -2,12 +2,11 @@
 
 <section class="inline-choice">
     <div class="container center">
-        <div class="inline-block">
-            <div class="signin">
+        <div class="row inline-block">
+            <div class="signin col-lg-6 ">
                 <a href="{% url 'service_app:signin_page' %}">Регистрация</a>
             </div>
-            <div class="vertical-line"></div>
-            <div class="login-active">
+            <div class="login-active col-lg-6">
                 <a href="#">Авторизация</a>
             </div>
         </div>
