--- a/templates/main/enter/inline-signin.html
+++ b/templates/main/enter/inline-signin.html
@@ -2,12 +2,11 @@
 
 <section class="inline-choice">
     <div class="container center">
-        <div class="inline-block">
-            <div class="signin-active">
+        <div class="row inline-block">
+            <div class="signin-active col-lg-6">
                 <a href="#">Регистрация</a>
             </div>
-            <div class="vertical-line"></div>
-            <div class="login">
+            <div class="login col-lg-6">
                 <a href="{% url 'service_app:login_page' %}">Авторизация</a>
             </div>
         </div>
