--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -1,22 +1,30 @@
 {% load static %}
 <header>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                {% if user.is_authenticated %}
 
-            <a class="navbar-brand" href="/">
-                <img src="{% static 'img/logo.png' %}" alt="logo">
-            </a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Welcome, {{ user.username }}</a>
+                    </li>
 
-            <button class="navbar-toggler navbar-light bg-light" type="button" data-toggle="collapse"
-                    data-target="#MenuHeaderRow"
-                    aria-controls="MenuHeaderRow" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            {% if auth %}
-                <li class="nav-item">
-                    <a class="nav-link underscoreLink" href="{% url 'service_app:logout_apge' %}">Выход</a>
-                </li>
-            {% endif %}
+                {% else %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+
+                {% endif %}
+            </ul>
         </div>
     </nav>
 </header>
