--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -11,7 +11,7 @@
                 {% if user.is_authenticated %}
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
+                        <a class="nav-link" href="{% url 'service_app:logout_apge' %}">Logout</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Welcome, {{ user.username }}</a>
@@ -20,7 +20,7 @@
                 {% else %}
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="{% url 'service_app:login_page' %}">Login</a>
                     </li>
 
                 {% endif %}
