--- a/templates/main/enter/signin.html
+++ b/templates/main/enter/signin.html
@@ -8,6 +8,13 @@
         <form method="POST">
             {% csrf_token %}
             {{ register_form|crispy }}
+            <script src='https://www.google.com/recaptcha/api.js'></script>
+            <div class="form-group g-recaptcha" data-sitekey="6LdbWY8aAAAAAHZNRQCpj2rM23vwiqTaTBXa-VTw"></div>
+            {% if messages %}
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            {% endif %}
             <button class="btn btn-primary" type="submit">Register</button>
         </form>
     </div>
