--- a/templates/main/login_page.html
+++ b/templates/main/login_page.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    {% include 'main/enter/inline-login.html' %}
+{#    {% include 'main/enter/inline-login.html' %}#}
 
     {% include 'main/enter/login.html' %}
 
