--- a/templates/main/signin_page.html
+++ b/templates/main/signin_page.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    {% include 'main/enter/inline-signin.html' %}
+{#    {% include 'main/enter/inline-signin.html' %}#}
 
     {% include 'main/enter/signin.html' %}
 
